# Baystation12

./: .codebeatignore  .codebeatsettings  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Atlas.dme  Bay12Code.dme  CNAME  CONTRIBUTING.md  COPYING  Dockerfile  Eros.dme  Eros.int  Eternal.dme  Eternal.log.txt  ExoResearch_1.dmm  HypatiaStation.dme  HypatiaStation.dme.orig  HypatiaStationOld.dme  HypatiaStationOld.dme.orig  ISSUE_TEMPLATE.md  IfImHereDeleteMe.txt  LICENSE  LICENSE-GPL3.txt  M.00 Space.dmm  M.02 Ishimura (U).dmm  ODST_Ship.dmm  ONI_antag.dm  RBstation2.dme  README.md  README.txt  SECURITY.md  SpacemanDMM.toml  Todo & Requests.txt  (+81 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  folder_note.md  keylabeler.yml  labeler.yml  main.workflow  pull.yml
Dennok/: TEST_MAP.dmm
SQL/: tgstation_schema.sql  tgstation_schema.utf8.sql
UnusedMaps/: exodus-1.dmm  exodus-2.dmm  exodus-3.dmm  exodus-4.dmm  exodus-5.dmm  exodus-6.dmm
backup/: unsc_achlys.dmm
bot/: CORE_DATA.py  C_eightball.py  C_heaortai.py  C_maths.py  C_rot13.py  C_sarcasticball.py  C_srtd.py  D_help.py  FMLformatter.py  NanoTrasenBot.py  _____Readme.txt  gen_fml.py  htmltagremove.py  irchat.py
code/: __spaceman_dmm.dm  _client_macros.dm  _macros.dm  _time.dm  _version.dm  client_macros.dm  closing_credits.dm  diary.dm  global.dm  hub.dm  names.dm  (+9 more)
code/modules/dmpg/: .gitignore  Cargo.toml
code/modules/dmpg/test/: main.dm
(+22251 files in other folders)
